# news-clustering-backend

./: .env.example  .gitignore  Dockerfile  README.md  application.json  background_task.py  clustering.py  compose.yaml  config.json  config.py  database.py  example.env  infra.yaml  main.py  parser_config.json  parsing.py  pyproject.toml  start-dev.sh  supervisord.conf
alembic/: env.py
alembic/versions/: 3ed31c3e894a_init_db.py
ml_models/: best_dt.joblib  best_lgbm.joblib  best_smote_dt.joblib  best_xgb.json
src/: background_task.py  clustering.py  config.py  const.py  database.py  dependencies.py  deps.py  exceptions.py  lifespan.py  logger.py  main.py  models.py  news_parser.py  pagination.py  schemas.py  tfidf_vectorizer.py  utils.py
src/background/: config.py  scheduler.py
src/bg/: celery.py  config.py  tasks.py
src/bg_tasks/: config.py  jobs.py  scheduler.py
src/clustering/: config.py  deps.py  router.py  service.py
src/clustering/preprocessing/: features_extractor.py  tfidf_vectorizer.py
src/dto/: article.py  available_models_list.py  base.py  last_parsing_time.py  news.py  pagination.py  parsers_sites_urls.py  selected_model_name.py  source.py  summaries.py  summaries_list_w_pagination.py  summary.py
src/models/: __init__.py  cluster.py  news.py  summary.py
src/news/: service.py  utils.py
src/parsers/: config.py  deps.py  dto.py  news.py  news_parser.py  parsers_factories.py  parsers_selection.py  router.py  schemas.py  service.py  utils.py
src/responses/: last_parsing_time.py  news_csv_table.py  pagination.py  parsers_sites_urls.py  selected_model_name.py  summaries_list_w_pagination.py  summary_w_sources.py
src/routers/: admin.py  ratings.py  sandbox.py  summaries.py
src/schemas/: rating.py  summaries.py
src/services/: background_service.py  bg_service.py  news_service.py  parsers_service.py  rating_service.py  summaries_service.py  summary_service.py
src/summaries/: enums.py  router.py  schemas.py  service.py
src/summarizers/: base_summarizer.py  config.py  deps.py  dt_summarizer.py  joblib_loader.py  lgbm_summarizer.py  model_based_summarizer.py  model_summarizer.py  rf_summarizer.py  router.py  schemas.py  service.py  tr_summarizer.py  utils.py  xgb_summarizer.py
src/summarizers/model_loaders/: joblib_loader.py  model_loader.py
src/summarizers/summarizers/: base_summarizer.py  model_summarizer.py
src/summarizers/utils/: joblib_loader.py  model_loader.py  model_selection.py  xgb_loader.py
src/text_processing/: background_task.py  clustering.py  clustering_pipeline.py  news_parser.py  parsing.py  start.py  summarization.py  tfidf_vectorizer.py  utils.py
