[project]
name = "news-clustering-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Нурлан Сабуров",email = "egor.porf1@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "dateparser (>=1.2.1,<2.0.0)",
    "scrapy (>=2.13.1,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "aiomultiprocess (>=0.9.1,<0.10.0)",
    "sumy (>=0.11.0,<0.12.0)",
    "razdel (>=0.5.0,<0.6.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "xgboost (>=3.0.2,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "pydantic-settings (>=2.10.0,<3.0.0)",
    "fastapi-admin (>=1.0.4,<2.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
